@@ -1,5 +1,10 @@
 2005-01-09  Arnaud Vandyck  <avdyk@ressource-toi.org>
 
+	* gnu/testlet/javax/swing/text/StringContent/BadLocationExceptionTest.java:
+	New file.
+
+2005-01-09  Arnaud Vandyck  <avdyk@ressource-toi.org>
+
 	* gnu/testlet/javax/swing/text/StringContent/StringContentTest.java,
 	gnu/testlet/javax/swing/text/StringContent/insertUndo.java,
 	gnu/testlet/javax/swing/text/StringContent/removeUndo.java,
